tmp/wrong_1640056272.164617.txt
identifier 'MSA_ST_DF'	 [StartOfLine]	Loc=<./tmp/code_7.c:1:1>
l_paren '('		Loc=<./tmp/code_7.c:1:10>
identifier 'DF_BYTE'		Loc=<./tmp/code_7.c:1:11>
comma ','		Loc=<./tmp/code_7.c:1:18>
identifier 'b'	 [LeadingSpace]	Loc=<./tmp/code_7.c:1:22>
comma ','		Loc=<./tmp/code_7.c:1:23>
identifier 'helper_ret_stb_mmu'	 [LeadingSpace]	Loc=<./tmp/code_7.c:1:25>
comma ','		Loc=<./tmp/code_7.c:1:43>
identifier 'oi'	 [LeadingSpace]	Loc=<./tmp/code_7.c:1:45>
comma ','		Loc=<./tmp/code_7.c:1:47>
identifier 'GETRA'	 [LeadingSpace]	Loc=<./tmp/code_7.c:1:49>
l_paren '('		Loc=<./tmp/code_7.c:1:54>
r_paren ')'		Loc=<./tmp/code_7.c:1:55>
r_paren ')'		Loc=<./tmp/code_7.c:1:56>
identifier 'MSA_ST_DF'	 [StartOfLine]	Loc=<./tmp/code_7.c:3:1>
l_paren '('		Loc=<./tmp/code_7.c:3:10>
identifier 'DF_HALF'		Loc=<./tmp/code_7.c:3:11>
comma ','		Loc=<./tmp/code_7.c:3:18>
identifier 'h'	 [LeadingSpace]	Loc=<./tmp/code_7.c:3:22>
comma ','		Loc=<./tmp/code_7.c:3:23>
identifier 'helper_ret_stw_mmu'	 [LeadingSpace]	Loc=<./tmp/code_7.c:3:25>
comma ','		Loc=<./tmp/code_7.c:3:43>
identifier 'oi'	 [LeadingSpace]	Loc=<./tmp/code_7.c:3:45>
comma ','		Loc=<./tmp/code_7.c:3:47>
identifier 'GETRA'	 [LeadingSpace]	Loc=<./tmp/code_7.c:3:49>
l_paren '('		Loc=<./tmp/code_7.c:3:54>
r_paren ')'		Loc=<./tmp/code_7.c:3:55>
r_paren ')'		Loc=<./tmp/code_7.c:3:56>
identifier 'MSA_ST_DF'	 [StartOfLine]	Loc=<./tmp/code_7.c:5:1>
l_paren '('		Loc=<./tmp/code_7.c:5:10>
identifier 'DF_WORD'		Loc=<./tmp/code_7.c:5:11>
comma ','		Loc=<./tmp/code_7.c:5:18>
identifier 'w'	 [LeadingSpace]	Loc=<./tmp/code_7.c:5:22>
comma ','		Loc=<./tmp/code_7.c:5:23>
identifier 'helper_ret_stl_mmu'	 [LeadingSpace]	Loc=<./tmp/code_7.c:5:25>
comma ','		Loc=<./tmp/code_7.c:5:43>
identifier 'oi'	 [LeadingSpace]	Loc=<./tmp/code_7.c:5:45>
comma ','		Loc=<./tmp/code_7.c:5:47>
identifier 'GETRA'	 [LeadingSpace]	Loc=<./tmp/code_7.c:5:49>
l_paren '('		Loc=<./tmp/code_7.c:5:54>
r_paren ')'		Loc=<./tmp/code_7.c:5:55>
r_paren ')'		Loc=<./tmp/code_7.c:5:56>
identifier 'MSA_ST_DF'	 [StartOfLine]	Loc=<./tmp/code_7.c:7:1>
l_paren '('		Loc=<./tmp/code_7.c:7:10>
identifier 'DF_DOUBLE'		Loc=<./tmp/code_7.c:7:11>
comma ','		Loc=<./tmp/code_7.c:7:20>
identifier 'd'	 [LeadingSpace]	Loc=<./tmp/code_7.c:7:22>
comma ','		Loc=<./tmp/code_7.c:7:23>
identifier 'helper_ret_stq_mmu'	 [LeadingSpace]	Loc=<./tmp/code_7.c:7:25>
comma ','		Loc=<./tmp/code_7.c:7:43>
identifier 'oi'	 [LeadingSpace]	Loc=<./tmp/code_7.c:7:45>
comma ','		Loc=<./tmp/code_7.c:7:47>
identifier 'GETRA'	 [LeadingSpace]	Loc=<./tmp/code_7.c:7:49>
l_paren '('		Loc=<./tmp/code_7.c:7:54>
r_paren ')'		Loc=<./tmp/code_7.c:7:55>
r_paren ')'		Loc=<./tmp/code_7.c:7:56>
./tmp/code_7.c:9:2: error: #else without #if
#else
 ^
identifier 'MSA_ST_DF'	 [StartOfLine]	Loc=<./tmp/code_7.c:11:1>
l_paren '('		Loc=<./tmp/code_7.c:11:10>
identifier 'DF_BYTE'		Loc=<./tmp/code_7.c:11:11>
comma ','		Loc=<./tmp/code_7.c:11:18>
identifier 'b'	 [LeadingSpace]	Loc=<./tmp/code_7.c:11:22>
comma ','		Loc=<./tmp/code_7.c:11:23>
identifier 'cpu_stb_data'	 [LeadingSpace]	Loc=<./tmp/code_7.c:11:25>
r_paren ')'		Loc=<./tmp/code_7.c:11:37>
identifier 'MSA_ST_DF'	 [StartOfLine]	Loc=<./tmp/code_7.c:13:1>
l_paren '('		Loc=<./tmp/code_7.c:13:10>
identifier 'DF_HALF'		Loc=<./tmp/code_7.c:13:11>
comma ','		Loc=<./tmp/code_7.c:13:18>
identifier 'h'	 [LeadingSpace]	Loc=<./tmp/code_7.c:13:22>
comma ','		Loc=<./tmp/code_7.c:13:23>
identifier 'cpu_stw_data'	 [LeadingSpace]	Loc=<./tmp/code_7.c:13:25>
r_paren ')'		Loc=<./tmp/code_7.c:13:37>
identifier 'MSA_ST_DF'	 [StartOfLine]	Loc=<./tmp/code_7.c:15:1>
l_paren '('		Loc=<./tmp/code_7.c:15:10>
identifier 'DF_WORD'		Loc=<./tmp/code_7.c:15:11>
comma ','		Loc=<./tmp/code_7.c:15:18>
identifier 'w'	 [LeadingSpace]	Loc=<./tmp/code_7.c:15:22>
comma ','		Loc=<./tmp/code_7.c:15:23>
identifier 'cpu_stl_data'	 [LeadingSpace]	Loc=<./tmp/code_7.c:15:25>
r_paren ')'		Loc=<./tmp/code_7.c:15:37>
identifier 'MSA_ST_DF'	 [StartOfLine]	Loc=<./tmp/code_7.c:17:1>
l_paren '('		Loc=<./tmp/code_7.c:17:10>
identifier 'DF_DOUBLE'		Loc=<./tmp/code_7.c:17:11>
comma ','		Loc=<./tmp/code_7.c:17:20>
identifier 'd'	 [LeadingSpace]	Loc=<./tmp/code_7.c:17:22>
comma ','		Loc=<./tmp/code_7.c:17:23>
identifier 'cpu_stq_data'	 [LeadingSpace]	Loc=<./tmp/code_7.c:17:25>
r_paren ')'		Loc=<./tmp/code_7.c:17:37>
./tmp/code_7.c:19:2: error: #endif without #if
#endif
 ^
void 'void'	 [StartOfLine]	Loc=<./tmp/code_7.c:23:1>
identifier 'helper_cache'	 [LeadingSpace]	Loc=<./tmp/code_7.c:23:6>
l_paren '('		Loc=<./tmp/code_7.c:23:18>
identifier 'CPUMIPSState'		Loc=<./tmp/code_7.c:23:19>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_7.c:23:32>
identifier 'env'		Loc=<./tmp/code_7.c:23:33>
comma ','		Loc=<./tmp/code_7.c:23:36>
identifier 'target_ulong'	 [LeadingSpace]	Loc=<./tmp/code_7.c:23:38>
identifier 'addr'	 [LeadingSpace]	Loc=<./tmp/code_7.c:23:51>
comma ','		Loc=<./tmp/code_7.c:23:55>
identifier 'uint32_t'	 [LeadingSpace]	Loc=<./tmp/code_7.c:23:57>
identifier 'op'	 [LeadingSpace]	Loc=<./tmp/code_7.c:23:66>
r_paren ')'		Loc=<./tmp/code_7.c:23:68>
l_brace '{'	 [StartOfLine]	Loc=<./tmp/code_7.c:25:1>
identifier 'target_ulong'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_7.c:29:5>
identifier 'index'	 [LeadingSpace]	Loc=<./tmp/code_7.c:29:18>
equal '='	 [LeadingSpace]	Loc=<./tmp/code_7.c:29:24>
identifier 'addr'	 [LeadingSpace]	Loc=<./tmp/code_7.c:29:26>
amp '&'	 [LeadingSpace]	Loc=<./tmp/code_7.c:29:31>
numeric_constant '0x1fffffff'	 [LeadingSpace]	Loc=<./tmp/code_7.c:29:33>
semi ';'		Loc=<./tmp/code_7.c:29:43>
if 'if'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_7.c:31:5>
l_paren '('	 [LeadingSpace]	Loc=<./tmp/code_7.c:31:8>
identifier 'op'		Loc=<./tmp/code_7.c:31:9>
equalequal '=='	 [LeadingSpace]	Loc=<./tmp/code_7.c:31:12>
numeric_constant '9'	 [LeadingSpace]	Loc=<./tmp/code_7.c:31:15>
r_paren ')'		Loc=<./tmp/code_7.c:31:16>
l_brace '{'	 [LeadingSpace]	Loc=<./tmp/code_7.c:31:18>
identifier 'memory_region_dispatch_write'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_7.c:35:9>
l_paren '('		Loc=<./tmp/code_7.c:35:37>
identifier 'env'		Loc=<./tmp/code_7.c:35:38>
arrow '->'		Loc=<./tmp/code_7.c:35:41>
identifier 'itc_tag'		Loc=<./tmp/code_7.c:35:43>
comma ','		Loc=<./tmp/code_7.c:35:50>
identifier 'index'	 [LeadingSpace]	Loc=<./tmp/code_7.c:35:52>
comma ','		Loc=<./tmp/code_7.c:35:57>
identifier 'env'	 [LeadingSpace]	Loc=<./tmp/code_7.c:35:59>
arrow '->'		Loc=<./tmp/code_7.c:35:62>
identifier 'CP0_TagLo'		Loc=<./tmp/code_7.c:35:64>
comma ','		Loc=<./tmp/code_7.c:35:73>
numeric_constant '8'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_7.c:37:38>
comma ','		Loc=<./tmp/code_7.c:37:39>
identifier 'MEMTXATTRS_UNSPECIFIED'	 [LeadingSpace]	Loc=<./tmp/code_7.c:37:41>
r_paren ')'		Loc=<./tmp/code_7.c:37:63>
semi ';'		Loc=<./tmp/code_7.c:37:64>
r_brace '}'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_7.c:39:5>
else 'else'	 [LeadingSpace]	Loc=<./tmp/code_7.c:39:7>
if 'if'	 [LeadingSpace]	Loc=<./tmp/code_7.c:39:12>
l_paren '('	 [LeadingSpace]	Loc=<./tmp/code_7.c:39:15>
identifier 'op'		Loc=<./tmp/code_7.c:39:16>
equalequal '=='	 [LeadingSpace]	Loc=<./tmp/code_7.c:39:19>
numeric_constant '5'	 [LeadingSpace]	Loc=<./tmp/code_7.c:39:22>
r_paren ')'		Loc=<./tmp/code_7.c:39:23>
l_brace '{'	 [LeadingSpace]	Loc=<./tmp/code_7.c:39:25>
identifier 'memory_region_dispatch_read'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_7.c:43:9>
l_paren '('		Loc=<./tmp/code_7.c:43:36>
identifier 'env'		Loc=<./tmp/code_7.c:43:37>
arrow '->'		Loc=<./tmp/code_7.c:43:40>
identifier 'itc_tag'		Loc=<./tmp/code_7.c:43:42>
comma ','		Loc=<./tmp/code_7.c:43:49>
identifier 'index'	 [LeadingSpace]	Loc=<./tmp/code_7.c:43:51>
comma ','		Loc=<./tmp/code_7.c:43:56>
amp '&'	 [LeadingSpace]	Loc=<./tmp/code_7.c:43:58>
identifier 'env'		Loc=<./tmp/code_7.c:43:59>
arrow '->'		Loc=<./tmp/code_7.c:43:62>
identifier 'CP0_TagLo'		Loc=<./tmp/code_7.c:43:64>
comma ','		Loc=<./tmp/code_7.c:43:73>
numeric_constant '8'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_7.c:45:37>
comma ','		Loc=<./tmp/code_7.c:45:38>
identifier 'MEMTXATTRS_UNSPECIFIED'	 [LeadingSpace]	Loc=<./tmp/code_7.c:45:40>
r_paren ')'		Loc=<./tmp/code_7.c:45:62>
semi ';'		Loc=<./tmp/code_7.c:45:63>
r_brace '}'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_7.c:47:5>
r_brace '}'	 [StartOfLine]	Loc=<./tmp/code_7.c:51:1>
eof ''		Loc=<./tmp/code_7.c:51:2>
2 errors generated.
